Sun Apr 26 21:59:43 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* transcode.c (ASIS): added for multi byte direct map.

	* transcode.c (transcode_restartable0): ditto.

Sun Apr 26 20:33:12 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/transcode-tb (ActionMap#generate_node):
	  Use ActionMap#gennode instead of generate_node
	  because of initialization.

Sun Apr 26 20:21:39 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* .gitignore: added.

Sun Apr 26 20:17:24 2009  Tanaka Akira  <akr@fsij.org>

	* lib/rake.rb: use RbConfig::CONFIG instead of Config::CONFIG.

	* lib/rbconfig/datadir.rb: ditto.

Sun Apr 26 19:30:29 2009  Tanaka Akira  <akr@fsij.org>

	* time.c (time_arg): unused variable removed.

Sun Apr 26 18:35:32 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_reopen): keeps pathv for prep_stdio.  [ruby-dev:38131]

Sun Apr 26 15:13:09 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (OptionParser#parse_in_order): do not make an
	  option from non-option argument.  [ruby-dev:38333]

Sat Apr 25 19:11:13 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (ac_cv_func_daemon): use daemon(3) only on *BSD.

	* process.c (proc_daemon): double fork to ensure not having ctty.
	  [ruby-core:23305]

Sat Apr 25 16:19:48 2009  Tanaka Akira  <akr@fsij.org>

	* time.c (month_arg): extracted from time_arg.
	  (validate_vtm): ditto.

Sat Apr 25 16:03:21 2009  Tanaka Akira  <akr@fsij.org>

	* time.c (TIME_COPY_GMT): new macro.
	  (time_s_at): use TIME_COPY_GMT.
	  (time_succ): ditto.

Sat Apr 25 15:54:04 2009  Tanaka Akira  <akr@fsij.org>

	* time.c (time_mload): use TIME_SET_UTC.

Sat Apr 25 15:47:54 2009  Tanaka Akira  <akr@fsij.org>

	* time.c (time_get_tm): take time_object instead of gmt.

Sat Apr 25 15:39:44 2009  Tanaka Akira  <akr@fsij.org>

	* time.c (time_succ): refactored to avoid gmt variable.
	  (strftimev): use TIME_UTC_P.
	  (time_strftime): ditto.

Sat Apr 25 15:21:33 2009  Tanaka Akira  <akr@fsij.org>
